# schedule-mami

./: README.md
android/: README
android/iSchedule/: .classpath  AndroidManifest.xml
android/iSchedule/res/drawable/: pink_button.xml  pink_edit_text.xml
android/iSchedule/res/layout/: auth_layout.xml  check_item.xml  check_list_layout.xml  info_layout.xml  list_activity_fragment.xml  list_activity_layout.xml  main.xml  main_tab_layout.xml  schedule_fragment_layout.xml  schedule_item_element.xml  schedule_list_item.xml  settings_menu.xml  update_fragment_layout.xml  update_list_layout.xml  weekly_fragment_layout.xml
android/iSchedule/res/menu/: ischedule_activity_menu.xml  main_activity_menu.xml  main_menu.xml
android/iSchedule/res/values/: strings.xml  theme.xml
android/iSchedule/res/xml/: preference_activity.xml
android/iSchedule/src/ru/mami/schedule/activities/: AppPreferenceActivity.java  IScheduleActivity.java  MainTabActivity.java  MenuSettingsActivity.java  UserInfoDialogActivity.java
android/iSchedule/src/ru/mami/schedule/adapters/: ScheduleUpdateListAdapter.java  SubjectAdapter.java  SubjectsListAdapter.java  TabCollectionPagerAdapter.java  UserAdapter.java
android/iSchedule/src/ru/mami/schedule/fragments/: AppPreferenceFragment.java  ScheduleListTabFragment.java  UpdateListTabFragment.java  WeeklyListTabFragment.java
android/iSchedule/src/ru/mami/schedule/utils/: CalendarManager.java  RequestStringsCreater.java  StringConstants.java  Subject.java  UpdateManager.java  UpdateService.java  XMLParser.java
android/iSchedule/src/ru/romanov/schedule/activities/: AppPreferenceActivity.java  IScheduleActivity.java  MainTabActivity.java  MenuSettingsActivity.java  UserInfoDialogActivity.java
android/iSchedule/src/ru/romanov/schedule/adapters/: CollectionPagerAdapter.java  ScheduleListPagerAdapter.java  ScheduleUpdateListAdapter.java  SubjectAdapter.java  SubjectsListAdapter.java  TabCollectionPagerAdapter.java  UserAdapter.java
android/iSchedule/src/ru/romanov/schedule/src/: AppPreferenceActivity.java  AppPreferenceFragment.java  IScheduleActivity.java  MainTabActivity.java  MenuSettingsActivity.java  ScheduleListActivity.java  ScheduleListFragment.java  UpdateListActivity.java  UpdateListFragment.java  UserInfoDialogActivity.java
android/iSchedule/src/ru/romanov/schedule/utils/: CalendarManager.java  RequestStringsCreater.java  StringConstants.java  Subject.java  UpdateManager.java  UpdateService.java  XMLParser.java
android/iSchedule/src/ru/romavon/fragments/: AppPreferenceFragment.java  ScheduleListTabFragment.java  UpdateListTabFragment.java  WeeklyListTabFragment.java
doc/: build-instructions-kazarov.doc  build_schedule.odt  schedule-delivery-system.docx
doc/android/romanov/: introduction.doc
doc/editor/: course_net_editor.doc
doc/import/: pavlienko-diploma-present.pptx
doc/schedule-samples/: naydenov-fulltimers-term1-2012-2013.doc  parttimers-gost-lectures.doc  schedule-jan-feb-2nd-halfyear.docx
doc/server/: course_net_server.doc  schedule_request.xsd  schedule_response.xsd
editor/: .gitignore  ActivityDialog.cpp  ActivityDialog.h  ActivityDialog.ui  App.cpp  App.h  DictionaryModel.cpp  DictionaryModel.h  DocxParser.cpp  DocxParser.h  ImageResourses.qrc  ReferenceEditor.cpp  ReferenceEditor.h  ReferenceEditor.ui  ScheduleDatesDialog.cpp  ScheduleDatesDialog.h  ScheduleDatesDialog.ui  ScheduleEditor.cpp  ScheduleEditor.h  ScheduleEditor.ui  ScheduleModel.cpp  ScheduleModel.h  SettingsEditor.cpp  SettingsEditor.h  StudGroupDialog.cpp  StudGroupDialog.h  StudGroupDialog.ui  Utils.cpp  Utils.h  XmlConfigModel.cpp  XmlConfigModel.h  dmp.sql  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  schedule_editor.pro  schedule_schema.xml  settings.xml  (+3 more)
editor/doc/: convert_docx_to_xml.sh  schedule.xml
editor/domain/: Activity.h  LoginSession.cpp  LoginSession.h  Place.cpp  Place.h  Schedule.cpp  Schedule.h  ScheduleActivity.cpp  ScheduleActivity.h  ScheduleDate.cpp  ScheduleDate.h  ScheduleGroup.cpp  ScheduleGroup.h  StudGroup.cpp  Subject.cpp  Subject.h  User.cpp  schedule_schema.sql
import/: category.cpp  category.h  classifier.cpp  classifier.h  delegate.cpp  delegate.h  documentparser.cpp  documentparser.h  docx_parser.pro  docx_parser.pro.user.82f564e  docx_parser.pro.user.f9fc0c7  mainwindow.cpp  mainwindow.h  mainwindow.ui  schedule_schema.xml  schedulemanager.cpp  schedulemanager.h  sharedobj.cpp  sharedobj.h  tablemodel.cpp  tablemodel.h  widget.cpp  widget.h
import/domain/: Activity.cpp  Activity.h  LoginSession.cpp  LoginSession.h  Place.h  Schedule.h  ScheduleActivity.cpp  ScheduleActivity.h  ScheduleDate.cpp  ScheduleGroup.cpp  ScheduleGroup.h  StudGroup.cpp  StudGroup.h  Subject.cpp  Subject.h  User.cpp  User.h
import/sample/: schedule.docx
server/: .gitignore  CMakeLists.txt  README.schedule  configure.ac  schedule-msou  settings.xml  wget_examples
server/src/: App.cpp  App.h  AuthControl.cpp  AuthControl.h  CMakeLists.txt  Commands.cpp  Commands.h  ContentChecker.cpp  ContentChecker.h  Makefile.am  ScheduleControl.cpp  ScheduleControl.h  global.h  logger.h  micro_http.cpp  micro_http.h  schedule.bat  schedule.sh.in  schedule_main.cpp  schedule_schema.xml  settings.xml.in
server/src/domain/: CMakeLists.txt  Makefile.am
server/src/tests/: Makefile.am  TestAuthControl.cpp  TestContentChecker.cpp  TestScheduleControl.cpp  settings.xml.in
server/src/tests/big_test/: android_client.cpp  android_client.h  test_schedule.cpp
